--- a/index.html
+++ b/index.html
@@ -56,39 +56,35 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/tokyo-in-spring-the-best-things-to-see-and-do/40625c8c-8a11-5710-a052-1479d276100f" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Tokyo in spring: the best things to see and do:</h3>
-                                <p class="post_description">Spring in Japan means sakura (cherry) blossoms. And that's just
-                                    one of the reasons to visit Tokyo at this time of year: there are also traditional
-                                    festivals, sumo, seasonal delicacies and a whole lot more in bloom in the city's parks
-                                    and gardens.</p>
-                            </div>
+                            <h3 class="post_heading">Tokyo in spring: the best things to see and do:</h3>
+                            <p class="post_description">Spring in Japan means sakura (cherry) blossoms. And that's just
+                                one of the reasons to visit Tokyo at this time of year: there are also traditional
+                                festivals, sumo, seasonal delicacies and a whole lot more in bloom in the city's parks
+                                and gardens.</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="article_post">
-                    <a class="article_link" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/best-places-to-see-cherry-blossoms-in-japan/40625c8c-8a11-5710-a052-1479d27777ee" target="_blank"><div class="post_overlay">
-                        <div class="post_overlay-content">
+                    <a class="article_link" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/best-places-to-see-cherry-blossoms-in-japan/40625c8c-8a11-5710-a052-1479d27777ee" target="_blank">
+                        <div class="post_overlay">
                             <h3 class="post_heading">Best places to see cherry blossoms in Japan:</h3>
                             <p class="post_description">Springtime in Japan and the country watches and waits for the
                                 first sakura (cherry) trees to burst into bloom. Once they do, people flock to parks and
                                 squares for hanami (cherry-blossom viewing). The romance is passionate but fleeting,
                                 lasting only a week or two.</p>
                         </div>
-                    </div></a>
+                    </a>
                 </div>
 
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/kansai/travel-tips-and-articles/exploring-ise-shima-getting-off-the-beaten-track-in-kansai/40625c8c-8a11-5710-a052-1479d276c73b" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Exploring Ise-Shima: getting off the beaten track in Kansai:</h3>
-                                <p class="post_description">Ise-Shima is famous as the home of Ise-jingū, one of Japan's
-                                    most revered Shintō shrines, and for many travellers the shrine might be all they see of
-                                    the area. With its ama diving culture, island life, and museums, there's plenty more to discover in this off-the-beaten-track corner of Kansai.
-                                </p>
-                            </div>
+                            <h3 class="post_heading">Exploring Ise-Shima: getting off the beaten track in Kansai:</h3>
+                            <p class="post_description">Ise-Shima is famous as the home of Ise-jingū, one of Japan's
+                                most revered Shintō shrines, and for many travellers the shrine might be all they see of
+                                the area. With its ama diving culture, island life, and museums, there's plenty more to discover in this off-the-beaten-track corner of Kansai.
+                            </p>
                         </div>
                     </a>
                 </div>
@@ -96,13 +92,11 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/kansai/osaka/travel-tips-and-articles/five-must-try-dishes-from-osaka/40625c8c-8a11-5710-a052-1479d2756b82" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Five must-try dishes from Osaka:</h3>
-                                <p class="post_description">There’s a reason the Japanese call Osaka tenka no daidokoro, or
-                                    ‘the nation’s kitchen’. If your fantasies of a trip to Japan involve flashing neon
-                                    lights, raucous nightlife and tempting treats hidden behind almost every darkened
-                                    doorway or lattice-screen facade, then Osaka is the destination for you.</p>
-                            </div>
+                            <h3 class="post_heading">Five must-try dishes from Osaka:</h3>
+                            <p class="post_description">There’s a reason the Japanese call Osaka tenka no daidokoro, or
+                                ‘the nation’s kitchen’. If your fantasies of a trip to Japan involve flashing neon
+                                lights, raucous nightlife and tempting treats hidden behind almost every darkened
+                                doorway or lattice-screen facade, then Osaka is the destination for you.</p>
                         </div>
                     </a>
                 </div>
@@ -110,13 +104,11 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/tokyo-restaurant-etiquette-the-ultimate-guide-to-dining-in-japans-capital/40625c8c-8a11-5710-a052-1479d27561b1" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Tokyo restaurant etiquette: the ultimate guide to dining in Japan’s
-                                    capital:</h3>
-                                <p class="post_description">Want to take a deep dive into Tokyo’s famous (and famously
-                                    amazing) dining scene, but worried about committing some unforgivable gaffe? Here's all
-                                    you need to know to eat like a local.</p>
-                            </div>
+                            <h3 class="post_heading">Tokyo restaurant etiquette: the ultimate guide to dining in Japan’s
+                                capital:</h3>
+                            <p class="post_description">Want to take a deep dive into Tokyo’s famous (and famously
+                                amazing) dining scene, but worried about committing some unforgivable gaffe? Here's all
+                                you need to know to eat like a local.</p>
                         </div>
                     </a>
                 </div>
@@ -124,13 +116,11 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/japans-top-10-culinary-locations/40625c8c-8a11-5710-a052-1479d27655fb" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Japan's top 10 culinary locations:</h3>
-                                <p class="post_description">Unesco recently added Japanese cuisine – known in Japan as
-                                    washoku – to its Intangible Cultural Heritage list. This puts it equal to French
-                                    cuisine, the only other national culinary tradition to be so honoured. A journey around
-                                    Japan reveals the wisdom of Unesco’s decision.</p>
-                            </div>
+                            <h3 class="post_heading">Japan's top 10 culinary locations:</h3>
+                            <p class="post_description">Unesco recently added Japanese cuisine – known in Japan as
+                                washoku – to its Intangible Cultural Heritage list. This puts it equal to French
+                                cuisine, the only other national culinary tradition to be so honoured. A journey around
+                                Japan reveals the wisdom of Unesco’s decision.</p>
                         </div>
                     </a>
                 </div>
@@ -138,12 +128,10 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/northern-honshu/travel-tips-and-articles/handmade-in-tohoku-traditional-crafts-of-northern-japan/40625c8c-8a11-5710-a052-1479d276bba9" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Handmade in Tōhoku: traditional crafts of northern Japan:</h3>
-                                <p class="post_description">Japan’s ‘deep north’, the largely rural Tōhoku region is home to
-                                    craft traditions that have been handed down over generations. A trip to this
-                                    little-visited swathe of the country offers a chance to see skilled artisans at work.</p>
-                            </div>
+                            <h3 class="post_heading">Handmade in Tōhoku: traditional crafts of northern Japan:</h3>
+                            <p class="post_description">Japan’s ‘deep north’, the largely rural Tōhoku region is home to
+                                craft traditions that have been handed down over generations. A trip to this
+                                little-visited swathe of the country offers a chance to see skilled artisans at work.</p>
                         </div>
                     </a>
                 </div>
@@ -151,13 +139,11 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/21-free-things-to-do-in-tokyo/40625c8c-8a11-5710-a052-1479d277befc" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">21 free things to do in Tokyo:</h3>
-                                <p class="post_description">Exploring the Big Sushi is a mind-blowing experience, but it can
-                                    also blow your budget. Don't despair – there’s an abundance of things to do and see in
-                                    Tokyo that don’t cost a single yen. From gardens and temples to contemporary art, sumo
-                                    practice and a world-famous fish market, you can experience Tokyo for free.</p>
-                            </div>
+                            <h3 class="post_heading">21 free things to do in Tokyo:</h3>
+                            <p class="post_description">Exploring the Big Sushi is a mind-blowing experience, but it can
+                                also blow your budget. Don't despair – there’s an abundance of things to do and see in
+                                Tokyo that don’t cost a single yen. From gardens and temples to contemporary art, sumo
+                                practice and a world-famous fish market, you can experience Tokyo for free.</p>
                         </div>
                     </a>
                 </div>
@@ -165,14 +151,12 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/how-to-live-like-a-local-in-tokyo/40625c8c-8a11-5710-a052-1479d2768619" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">How to live like a local in Tokyo:</h3>
-                                <p class="post_description">Lonely Planet Local Rebecca Milner moved to Tokyo for ‘just one
-                                    year'… 15 years ago. She was drawn by the city’s larger-than-life image – all those
-                                    bright lights and busy streets – but was surprised to discover just how liveable Tokyo
-                                    really is. She spends her days wandering the back streets, tracking down new restaurants
-                                    and writing in cafes.</p>
-                            </div>
+                            <h3 class="post_heading">How to live like a local in Tokyo:</h3>
+                            <p class="post_description">Lonely Planet Local Rebecca Milner moved to Tokyo for ‘just one
+                                year'… 15 years ago. She was drawn by the city’s larger-than-life image – all those
+                                bright lights and busy streets – but was surprised to discover just how liveable Tokyo
+                                really is. She spends her days wandering the back streets, tracking down new restaurants
+                                and writing in cafes.</p>
                         </div>
                     </a>
                 </div>
@@ -180,12 +164,10 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/travel-tips-and-articles/six-lesser-known-reasons-to-visit-japans-oita-prefecture/40625c8c-8a11-5710-a052-1479d2754b08" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Six lesser-known reasons to visit Japan's Oita Prefecture:</h3>
-                                <p class="post_description">Oita, a prefecture on Japan's southern-most island of Kyūshū, is
-                                    world-famous for its incredible hot springs. Towns like Beppu host bathers from around
-                                    the world. Here are six great less-visited spots in Oita Prefecture.</p>
-                            </div>
+                            <h3 class="post_heading">Six lesser-known reasons to visit Japan's Oita Prefecture:</h3>
+                            <p class="post_description">Oita, a prefecture on Japan's southern-most island of Kyūshū, is
+                                world-famous for its incredible hot springs. Towns like Beppu host bathers from around
+                                the world. Here are six great less-visited spots in Oita Prefecture.</p>
                         </div>
                     </a>
                 </div>
@@ -193,13 +175,11 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/northern-honshu/travel-tips-and-articles/five-reasons-to-visit-iwate-on-your-japan-trip/40625c8c-8a11-5710-a052-1479d27542a9" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Five reasons to visit Iwate on your Japan trip</h3>
-                                <p class="post_description">A beautiful natural landscape from mountains to dramatic coast,
-                                    a traditional craft-making culture, and regional food specialities that include a noodle
-                                    challenge are just a few reasons to detour north and explore Iwate Prefecture as part of
-                                    a Japan itinerary.</p>
-                            </div>
+                            <h3 class="post_heading">Five reasons to visit Iwate on your Japan trip</h3>
+                            <p class="post_description">A beautiful natural landscape from mountains to dramatic coast,
+                                a traditional craft-making culture, and regional food specialities that include a noodle
+                                challenge are just a few reasons to detour north and explore Iwate Prefecture as part of
+                                a Japan itinerary.</p>
                         </div>
                     </a>
                 </div>
@@ -207,12 +187,10 @@
                 <div class="article_post">
                     <a class="article_link" href="https://www.lonelyplanet.com/japan/tokyo/travel-tips-and-articles/how-to-live-like-a-local-in-tokyo/40625c8c-8a11-5710-a052-1479d2768619" target="_blank">
                         <div class="post_overlay">
-                            <div class="post_overlay-content">
-                                <h3 class="post_heading">Visiting Japan's ghost island of Hashima:</h3>
-                                <p class="post_description">The small island of Hashima was once bustling with a community
-                                    of 5000 people, who lived alongside the mines they worked. Abandoned in the 1970s, the
-                                    island and its buildings had been left to the elements.</p>
-                            </div>
+                            <h3 class="post_heading">Visiting Japan's ghost island of Hashima:</h3>
+                            <p class="post_description">The small island of Hashima was once bustling with a community
+                                of 5000 people, who lived alongside the mines they worked. Abandoned in the 1970s, the
+                                island and its buildings had been left to the elements.</p>
                         </div>
                     </a>
                 </div>
