--- a/subscribe.html
+++ b/subscribe.html
@@ -29,10 +29,10 @@
             </div>
             <div class="nav_list-wrapper">
                 <ul class="nav_list">
-                    <li class="nav_list-items activities fade"><a class="list_item-link" href="/index.html">Home</a></li>
-                    <li class="nav_list-items activities fade"><a class="list_item-link" href="/activites.html">Activites</a></li>
-                    <li class="nav_list-items food fade"><a class="list_item-link" href="#">Things To Eat</a></li>
-                    <li class="nav_list-items newsletter"><a class="list_item-link" href="#">Newsletter</a></li>
+                    <li class="nav_list-items fade"><a class="list_item-link" href="/index.html">Home</a></li>
+                    <li class="nav_list-items fade"><a class="list_item-link" href="/activities.html">Activites</a></li>
+                    <li class="nav_list-items fade"><a class="list_item-link" href="#">Things To Eat</a></li>
+                    <li class="nav_list-items"><a class="list_item-link" href="#">Newsletter</a></li>
                 </ul>
             </div>
         </nav>
@@ -71,26 +71,25 @@
             </div>
         </section>
 
-
-    <footer id="footer" class="main_footer">
-        <nav class="footer_nav">
-            <ul class="footer_nav--list">
-                <li><a class="footer_nav--item" href="/index.html">Home</a></li>
-                <li><a class="footer_nav--item" href="/activites.html">Activites</a></li>
-                <li><a class="footer_nav--item" href="#">Food</a></li>
-            </ul>
-        </nav>
-        <div class="footer_icon--list">
-            <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
-                    class="fab fa-linkedin"></i></a>
-            <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
-                    class="fab fa-instagram"></i></a>
-            <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
-                    class="fab fa-github-square"></i></a>
-        </div>
-        <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
-    </footer>
-</main>
+        <footer id="footer" class="main_footer">
+            <nav class="footer_nav">
+                <ul class="footer_nav--list">
+                    <li><a class="footer_nav--item" href="/index.html">Home</a></li>
+                    <li><a class="footer_nav--item" href="/activities.html">Activites</a></li>
+                    <li><a class="footer_nav--item" href="#">Food</a></li>
+                </ul>
+            </nav>
+            <div class="footer_icon--list">
+                <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
+                <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
+                        class="fab fa-github-square"></i></a>
+            </div>
+            <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
+        </footer>
+    </main>
     <script src="./subscribe/index.js"></script>
 </body>
 
