--- a/subscribe.html
+++ b/subscribe.html
@@ -90,7 +90,7 @@
             <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
         </footer>
     </main>
-    <script src="./subscribe/index.js"></script>
+    <script src="./subscribe/subsribe.js"></script>
 </body>
 
 </html>
