created food page

--- a/food.html
+++ b/food.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Activities | Japan</title>
+    <title>Things To Eat | Japan</title>
 </head>
 
 <body>
@@ -34,13 +34,11 @@
                 <li class="nav_list-items fade"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </div>
-    </nav>
-
-    <div class="divider-image"></div>
+    </nav>å
 
     <header class="main_header">
         <h1 class="header_title">Japan</h1>
-        <p class="header_description">Explore Activites &amp; Destinations</p>
+        <p class="header_description">Explore New Foods &amp; Amazing Japanese Resturants</p>
     </header>
 
     <script src="./activities/activities.js"></script>
