moved post photos into a folder

--- a/activities.html
+++ b/activities.html
@@ -23,26 +23,52 @@
             <i></i>
         </label>
         <div class="logo_wrapper">
-            <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-            <a class="logo_text" href="/index.html"><div>Japan</div></a>
+            <img class="logo_image" src="../assets/images/logo.jpg" alt="Logo">
+            <a class="logo_text" href="/index.html"><div>explore</div></a>
         </div>
         <div class="nav_list-wrapper">
             <ul class="nav_list">
                 <li class="nav_list-items fade"><a class="list_item-link" href="/index.html">Home</a></li>
-                <li class="nav_list-items food"><a class="list_item-link" href="#">Activites</a></li>
-                <li class="nav_list-items fade"><a class="list_item-link" href="#">Things To Eat</a></li>
+                <li class="nav_list-items"><a class="list_item-link" href="#">Activites</a></li>
+                <li class="nav_list-items fade"><a class="list_item-link" href="/food.html">Things To Eat</a></li>
                 <li class="nav_list-items fade"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </div>
-    </nav>
-
-    <div class="divider-image"></div>
+    </nav>å
 
     <header class="main_header">
         <h1 class="header_title">Japan</h1>
         <p class="header_description">Explore Activites &amp; Destinations</p>
     </header>
 
+    <section class="filler"></section>
+    
+    <section class="contact_section-wrapper">
+        <div class="contact_wrapper">
+            <h2 class="contact_heading">Connect with us social media</h2>
+            <p class="contact_subtext">linked down below</p>
+        </div>
+    </section>
+
+    <footer id="footer" class="main_footer">
+        <nav class="footer_nav">
+            <ul class="footer_nav--list">
+                <li><a class="footer_nav--item" href="/index.html">Home</a></li>
+                <li><a class="footer_nav--item" href="/activities.html">Activites</a></li>
+                <li><a class="footer_nav--item" href="#">Food</a></li>
+            </ul>
+        </nav>
+        <div class="footer_icon--list">
+            <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+            <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
+                    class="fab fa-instagram"></i></a>
+            <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
+                    class="fab fa-github-square"></i></a>
+        </div>
+        <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
+    </footer>
+    
     <script src="./activities/activities.js"></script>
 </body>
 
