--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <i></i>
             </label>
             <div class="logo_wrapper">
-                <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-                <a class="logo_text" href="#"><div>Japan</div></a>
+                <img class="logo_image" src="../assets/images/logo.jpg" alt="Logo">
+                <a class="logo_text" href="#"><div>explore</div></a>
             </div>
             <div class="nav_list-wrapper">
                 <ul class="nav_list">
                     <li class="nav_list-items activities"><a class="list_item-link" href="/activities.html">Activites</a></li>
-                    <li class="nav_list-items food"><a class="list_item-link" href="#">Things To Eat</a></li>
+                    <li class="nav_list-items food"><a class="list_item-link" href="/food.html">Things To Eat</a></li>
                     <li class="nav_list-items subscribe"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
                 </ul>
             </div>
@@ -217,38 +217,25 @@
                     <p class="content_paragraph">Don't forget to subscribe to our newsletter! Stay connected with all
                         things Japan, all the time, Be the first to know about new events. Discover stories about art,
                         architecture, design, and more. And receive invites to happenings across the world. </p>
-                    <img class="content_logo" src="./assets/images/avi.jpg" alt="Logo">
+                    <img class="content_logo" src="./assets/images/logo.jpg" alt="Logo">
                     <h3 class="content_heading">How will you join the adventure?</h3>
                     <a class="content_button" href="./subscribe.html">Subscribe To Our Newsletter</a>
                 </div>
             </div>
         </section>
 
-        <div class="fact_labels">
-            <h2 class="section_title">Fun Facts</h2>
-            <p class="section_subtext">Learn a Fun Fact!</p>
-        </div>
-
-        <section class="facts_section">
-            <div class="fact_wrapper">
-                <h2 class="fact_heading">6,800+</h2>
-                <p class="fact_subtext">Islands Make Up Japan</p>
-            </div>
-            <div class="fact_wrapper">
-                <h2 class="fact_heading">100+</h2>
-                <p clas="fact_subtext">Volcanoes Are Found In Japan</p>
-            </div>
-            <div class="fact_wrapper">
-                <h2 class="fact_heading">2,000,000+</h2>
-                <p clas="fact_subtext">People Visit Japan Each Month</p>
-            </div>
+        <section class="contact_section-wrapper">
+                <div class="contact_wrapper">
+                    <h2 class="contact_heading">Connect with us social media</h2>
+                    <p class="contact_subtext">linked down below</p>
+                </div>
         </section>
 
         <footer class="main_footer">
             <nav class="footer_nav">
                 <ul class="footer_nav-list">
                     <li><a class="footer_nav-item" href="/activities.html">Activites</a></li>
-                    <li><a class="footer_nav-item" href="#">Food</a></li>
+                    <li><a class="footer_nav-item" href="/food.html">Food</a></li>
                     <li><a class="footer_nav-item" href="/subscribe.html">Newsletter</a></li>
                 </ul>
             </nav>
