--- a/subscribe.html
+++ b/subscribe.html
@@ -24,8 +24,8 @@
                 <i></i>
             </label>
             <div class="logo_wrapper">
-                <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-                <a class="logo_text" href="/index.html"><div>Japan</div></a>
+                <img class="logo_image" src="../assets/images/logo.jpg" alt="Logo">
+                <a class="logo_text" href="/index.html"><div>explore</div></a>
             </div>
             <div class="nav_list-wrapper">
                 <ul class="nav_list">
@@ -45,7 +45,7 @@
         <section class="content_wrapper">
             <div class="form_wrap">
                 <form class="form_signup form">
-                    <img class="form-logo" src="./assets/images/avi.jpg" alt="Logo">
+                    <img class="form-logo" src="./assets/images/logo.jpg" alt="Logo">
                     <h1 class="form-title">Subscribe</h1>
                     <label for="inputFirstName"></label>
                     <input type="text" id="inputFirstName" class="form_control" placeholder="First Name" required=""
@@ -59,7 +59,7 @@
                     <input type="email" id="inputEmail" class="form_control" placeholder="Email Address" required="">
                     <textarea id="inputMessage" class="form_control" placeholder="Leave us a message!"></textarea>
                     <button class="form_button" id="submitButton" type="submit">Submit</button>
-                    <p class="form_copyright">© Japan.io</p>
+                    <p class="form_copyright">© Explore.io</p>
                 </form>
             </div>
         </section>
