--- a/food.html
+++ b/food.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./activities/activities.css">
+    <link rel="stylesheet" href="./food/food.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -23,25 +23,53 @@
             <i></i>
         </label>
         <div class="logo_wrapper">
-            <img class="logo_image" src="../assets/images/avi.jpg" alt="Logo">
-            <a class="logo_text" href="/index.html"><div>Japan</div></a>
+            <img class="logo_image" src="../assets/images/logo.jpg" alt="Logo">
+            <a class="logo_text" href="/index.html"><div>explore</div></a>
         </div>
         <div class="nav_list-wrapper">
             <ul class="nav_list">
                 <li class="nav_list-items fade"><a class="list_item-link" href="/index.html">Home</a></li>
-                <li class="nav_list-items food"><a class="list_item-link" href="#">Activites</a></li>
-                <li class="nav_list-items fade"><a class="list_item-link" href="#">Things To Eat</a></li>
+                <li class="nav_list-items fade"><a class="list_item-link" href="/activities.html">Activites</a></li>
+                <li class="nav_list-items"><a class="list_item-link" href="#">Things To Eat</a></li>
                 <li class="nav_list-items fade"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </div>
-    </nav>å
+    </nav>
 
     <header class="main_header">
         <h1 class="header_title">Japan</h1>
         <p class="header_description">Explore New Foods &amp; Amazing Japanese Resturants</p>
     </header>
 
-    <script src="./activities/activities.js"></script>
+    <section class="filler"></section>
+    
+    <section class="contact_section-wrapper">
+        <div class="contact_wrapper">
+            <h2 class="contact_heading">Connect with us social media</h2>
+            <p class="contact_subtext">linked down below</p>
+        </div>
+    </section>
+
+    <footer id="footer" class="main_footer">
+        <nav class="footer_nav">
+            <ul class="footer_nav--list">
+                <li><a class="footer_nav--item" href="/index.html">Home</a></li>
+                <li><a class="footer_nav--item" href="/activities.html">Activites</a></li>
+                <li><a class="footer_nav--item" href="#">Food</a></li>
+            </ul>
+        </nav>
+        <div class="footer_icon--list">
+            <a class="footer_icon" href="https://www.linkedin.com/in/thomas-mckyer/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+            <a class="footer_icon" href="https://www.instagram.com/tmckyer/" target="_blank"><i
+                    class="fab fa-instagram"></i></a>
+            <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
+                    class="fab fa-github-square"></i></a>
+        </div>
+        <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
+    </footer>
+
+    <script src="./food/food.js"></script>
 </body>
 
 </html>
