changed the copyright name

--- a/subscribe.html
+++ b/subscribe.html
@@ -87,7 +87,7 @@
                 <a class="footer_icon" href="https://github.com/tivler" target="_blank"><i
                         class="fab fa-github-square"></i></a>
             </div>
-            <p class="copyright">2019 &copy; copyright designed and developed by Thomas McKyer</p>
+            <p class="copyright">2019 &copy; copyright designed and developed by Tivler</p>
         </footer>
     </main>
     <script src="./subscribe/subsribe.js"></script>
