created experience folder

--- a/activities.html
+++ b/activities.html
@@ -34,12 +34,14 @@
                 <li class="nav_list-items fade"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </div>
-    </nav>å
+    </nav>
 
     <header class="main_header">
         <h1 class="header_title">Japan</h1>
         <p class="header_description">Explore Activites &amp; Destinations</p>
     </header>
+
+
 
     <section class="filler"></section>
     
