--- a/discover.html
+++ b/discover.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./activities/activities.css">
+    <link rel="stylesheet" href="/discover/discover.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -29,8 +29,8 @@
         <div class="nav_list-wrapper">
             <ul class="nav_list">
                 <li class="nav_list-items fade"><a class="list_item-link" href="/index.html">Home</a></li>
-                <li class="nav_list-items"><a class="list_item-link" href="#">Activites</a></li>
-                <li class="nav_list-items fade"><a class="list_item-link" href="/food.html">Things To Eat</a></li>
+                <li class="nav_list-items"><a class="list_item-link" href="#">Discover</a></li>
+                <li class="nav_list-items fade"><a class="list_item-link" href="/food.html">Food</a></li>
                 <li class="nav_list-items fade"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
             </ul>
         </div>
@@ -56,7 +56,7 @@
         <nav class="footer_nav">
             <ul class="footer_nav--list">
                 <li><a class="footer_nav--item" href="/index.html">Home</a></li>
-                <li><a class="footer_nav--item" href="/activities.html">Activites</a></li>
+                <li><a class="footer_nav--item" href="/discover.html">Discover</a></li>
                 <li><a class="footer_nav--item" href="#">Food</a></li>
             </ul>
         </nav>
@@ -71,7 +71,7 @@
         <p class="copyright">2019 &copy; copyright designed and developed by tivler</p>
     </footer>
     
-    <script src="./activities/activities.js"></script>
+    <script src="/discover/discover.js"></script>
 </body>
 
 </html>
