--- a/food.html
+++ b/food.html
@@ -29,7 +29,7 @@
         <div class="nav_list-wrapper">
             <ul class="nav_list">
                 <li class="nav_list-items fade"><a class="list_item-link" href="/index.html">Home</a></li>
-                <li class="nav_list-items fade"><a class="list_item-link" href="/activities.html">Activites</a></li>
+                <li class="nav_list-items fade"><a class="list_item-link" href="/discover.html">Discover</a></li>
                 <li class="nav_list-items"><a class="list_item-link" href="#">Things To Eat</a></li>
                 <li class="nav_list-items fade"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
             </ul>
@@ -54,7 +54,7 @@
         <nav class="footer_nav">
             <ul class="footer_nav--list">
                 <li><a class="footer_nav--item" href="/index.html">Home</a></li>
-                <li><a class="footer_nav--item" href="/activities.html">Activites</a></li>
+                <li><a class="footer_nav--item" href="/discover.html">Discover</a></li>
                 <li><a class="footer_nav--item" href="#">Food</a></li>
             </ul>
         </nav>
