--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="nav_list-wrapper">
                 <ul class="nav_list">
-                    <li class="nav_list-items activities"><a class="list_item-link" href="/experience.html">Experiences</a></li>
-                    <li class="nav_list-items food"><a class="list_item-link" href="/food.html">Things To Eat</a></li>
+                    <li class="nav_list-items activities"><a class="list_item-link" href="/discover.html">Discover</a></li>
+                    <li class="nav_list-items food"><a class="list_item-link" href="/food.html">Food</a></li>
                     <li class="nav_list-items subscribe"><a class="list_item-link" href="/subscribe.html">Newsletter</a></li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
                 to zen-like Kyoto all the way to laid-back Okinawa and wintery Hokkaido, There's an adventure for
                 everyone.</p>
             <div class="button_wrapper">
-                <a class="button" href="/experience.html">View Experiences</a>
+                <a class="button" href="/discover.html">Discover Japan</a>
             </div>
         </header>
 
@@ -234,7 +234,7 @@
         <footer class="main_footer">
             <nav class="footer_nav">
                 <ul class="footer_nav-list">
-                    <li><a class="footer_nav-item" href="/experience.html">Activites</a></li>
+                    <li><a class="footer_nav-item" href="/discover.html">Discover</a></li>
                     <li><a class="footer_nav-item" href="/food.html">Food</a></li>
                     <li><a class="footer_nav-item" href="/subscribe.html">Newsletter</a></li>
                 </ul>
