made changes to discover page

--- a/discover.html
+++ b/discover.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="backsplash"></div>
+    <div class="background-image"></div>
 
     <nav class="main_nav">
         <input type="checkbox" id="nav" class="hidden">
@@ -37,8 +37,7 @@
     </nav>
 
     <header class="main_header">
-        <h1 class="header_title">Japan</h1>
-        <p class="header_description">Explore Activites &amp; Destinations</p>
+        <h1 class="header_title">Discover Japan</h1>
     </header>
 
     <section class="filler"></section>
